--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "a super cool coloring app",
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@preact/signals-react": "^1.3.6",
     "color": "^4.2.3",
+    "framer-motion": "^10.16.4",
     "grommet": "^2.33.2",
     "grommet-icons": "^4.11.0",
     "react": "^18.2.0",
